--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0"> <!--Responsive-->
     <link rel="icon" type="image/x-icon" href="../images/heart.png"> <!--image on the top-->
     <title>Gaveesha Welhena </title>
-    <link rel="stylesheet" href="portfolio.css"> <!--linking the stylesheet-->
+    <link rel="stylesheet" href="index.css"> <!--linking the stylesheet-->
 </head>
 
 <body>
