--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0"> <!--Responsive-->
-    <link rel="icon" type="image/x-icon" href="../images/heart.png"> <!--image on the top-->
+    <link rel="icon" type="image/x-icon" href="../portfolio/images/heart.png"> <!--image on the top-->
     <title>Gaveesha Welhena </title>
     <link rel="stylesheet" href="index.css"> <!--linking the stylesheet-->
 </head>
@@ -25,8 +25,8 @@
                 <a class="blogs" href="../blogs/blogs.html">Projects</a> <!--when clicked on blogs, it redirects to the blogs page-->
                 <a class="contact" href="../contact/contact.html">Contact</a> <!--when clicked on contact, it redirects to the contact page-->
             </nav>
-            <img src="../images/sky.jfif" class="background" alt="sky"> <!--background images-->
-            <img src="../images/bgimg.png" class="foreground" alt="balloons"> <!--this adds the parallax effect-->
+            <img src="../portfolio/images/sky.jfif" class="background" alt="sky"> <!--background images-->
+            <img src="../portfolio/images/bgimg.png" class="foreground" alt="balloons"> <!--this adds the parallax effect-->
             <h1 class="title">Welcome!</h1>
         </header>
         <section>
