--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 </p>
             </div>
             <nav>
-                <a class="about" href="../about/about.html">About</a> <!--when clicked on about, it redirects to the about page-->
-                <a class="blogs" href="../blogs/blogs.html">Projects</a> <!--when clicked on blogs, it redirects to the blogs page-->
-                <a class="contact" href="../contact/contact.html">Contact</a> <!--when clicked on contact, it redirects to the contact page-->
+                <a class="about" href="../portfolio/about/about.html">About</a> <!--when clicked on about, it redirects to the about page-->
+                <a class="blogs" href="../portfolio/blogs/blogs.html">Projects</a> <!--when clicked on blogs, it redirects to the blogs page-->
+                <a class="contact" href="../portfolio/contact/contact.html">Contact</a> <!--when clicked on contact, it redirects to the contact page-->
             </nav>
             <img src="../portfolio/images/sky.jfif" class="background" alt="sky"> <!--background images-->
             <img src="../portfolio/images/bgimg.png" class="foreground" alt="balloons"> <!--this adds the parallax effect-->
