--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="top"> <!--named this top, so that i can add an arrow to jump to the top from the bottom using a button-->
             <div class="container"> <!--container where i store my name-->
                 <p class="code">
-                    <a href="../main/main.html" class="ahover"> <!--when i click on my name, it redirects to the main page-->
+                    <a href="../portfolio/index.html" class="ahover"> <!--when i click on my name, it redirects to the main page-->
                         <span class="text">&#169; Code by Gaveesha </span> <!--&#169 is the code for copyright symbol-->
                         <span class="hover">Gaveesha Welhena</span> <!--when i hover over code by gaveesha, it displays gaveesha welhena-->
                     </a>
@@ -38,7 +38,7 @@
                 <h1>Check out My CV!</h1>
                 <p>Please consider reviewing my CV for your consideration and I am eager to join your team. I look forward to contributing to your team! </p>
                 <div class="download">
-                    <a href="../files/G4_20220594.pdf" download="Gaveesha_20220594_CV" class="download-btn">Download My CV here!</a> <!--the button to download my CV-->
+                    <a href="../portfolio/files/G4_20220594.pdf" download="Gaveesha_20220594_CV" class="download-btn">Download My CV here!</a> <!--the button to download my CV-->
                 </div>
             </div>
             <div class="card-container-3"> <!--container to display my skills-->
@@ -62,7 +62,7 @@
         <section>
             <div class="contact-wrapper"> <!--this wraps both let's work together container and email button together so that it can be the same size and same place-->
                 <div class="contact-container"> <!--container for text-->
-                    <img class="icon" src="../images/heart.png" alt="image">
+                    <img class="icon" src="../portfolio/images/heart.png" alt="image">
                     <div class="text">
                         <p class="first">Let's work </p>
                         <p class="second"> together</p>
