--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -97,7 +97,7 @@
 
             <div class="boxblog"> <!--this is the main box which contains all the text and the image-->
                 <div class="imgblog"> <!--this is the container for the image-->
-                    <img src="../images/img4.JPG" alt="Blog photo 2"> <!--image link-->
+                    <img src="../images/img4.jpg" alt="Blog photo 2"> <!--image link-->
                     <div class="textblog"> <!--the container for the text-->
                         <a href="" class="titleblog">Queue management and entry tracking system for a restaurant</a> <!--inlcudes the blog link-->
                         <p><b>May 2023 - July 2023</b></p>
